--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,10 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
+selenium = "*"
+python-dotenv = "*"
+pdfkit = "*"
+pypdf2 = "*"
 
 [requires]
 python_version = "3.7"
